// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegoSelectionService createLegoSelectMessage with existing entries 1`] = `
Object {
  "channelData": Object {
    "channelId": "someChannelId",
    "name": "someChannel",
  },
  "date": 2018-10-01T00:00:00.000Z,
  "id": "someMessageId",
  "selectedValues": Array [
    Object {
      "entries": Array [
        Object {
          "userData": Object {
            "userId": "someUserId",
            "userName": "someuser",
          },
          "value": 8,
        },
      ],
      "id": "someActionName",
    },
    Object {
      "entries": Array [
        Object {
          "userData": Object {
            "userId": "someUserId",
            "userName": "someuser",
          },
          "value": 6,
        },
      ],
      "id": "someOtherActionName",
    },
    LegoSelectedValue {
      "entries": Array [
        LegoSelectedValueEntry {
          "userData": Object {
            "userId": "someUserId",
            "userName": "someuser",
          },
          "value": 7,
        },
      ],
      "id": undefined,
    },
  ],
}
`;

exports[`LegoSelectionService createLegoSelectMessage without entries 1`] = `
Object {
  "channelData": Object {
    "channelId": "someChannelId",
    "name": "someChannel",
  },
  "date": 2018-10-01T00:00:00.000Z,
  "id": "someMessageId",
  "selectedValues": Array [
    LegoSelectedValue {
      "entries": Array [
        LegoSelectedValueEntry {
          "userData": Object {
            "userId": "someUserId",
            "userName": "someuser",
          },
          "value": 7,
        },
      ],
      "id": undefined,
    },
  ],
}
`;
